--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -10,8 +10,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-
       - uses: actions/checkout@v3
+
+      - name: Validate Docker secrets
+        run: |
+          if [ -z "${{ secrets.DOCKER_USERNAME }}" ] || [ -z "${{ secrets.DOCKER_PASSWORD }}" ]; then
+            echo "Docker secrets are not set!"
+            exit 1
+          fi
+          # Optionally, warn if username contains whitespace or newlines
+          if [[ "${{ secrets.DOCKER_USERNAME }}" =~ [[:space:]] ]]; then
+            echo "Docker username contains whitespace or newline."
+            exit 1
+          fi
 
       - name: Login to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
