--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -27,8 +27,7 @@ jobs:
       - name: Login to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      - name: Build image
-        run: docker build -t "${{ secrets.DOCKER_USERNAME }}/test-project:latest" .
-
+          - name: Build image
+        run: docker build -t "waleedcodearch/test-project:latest" .
       - name: Push image
-        run: docker push "${{ secrets.DOCKER_USERNAME }}/test-project:latest"
+        run: docker push "waleedcodearch/test-project:latest"
