--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,3 +1,22 @@
+name: Build and test Docker image
+on:
+  push:
+    branches: [ main, master ]
+  pull_request:
+    branches: [ main, master ]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Build image
+        run: docker build -t test-project:latest .
+
 name: Test Docker Pipeline
 
 on:
@@ -27,7 +46,8 @@ jobs:
       - name: Login to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-          - name: Build image
-        run: docker build -t "waleedcodearch/test-project:latest" .
+      - name: Build image
+        run: docker build -t "${{ secrets.DOCKER_USERNAME }}/test-project:latest" .
+
       - name: Push image
-        run: docker push "waleedcodearch/test-project:latest"
+        run: docker push "${{ secrets.DOCKER_USERNAME }}/test-project:latest"
