--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -36,11 +36,13 @@ jobs:
 
  # ⭐ ADD HERE — Deploy monitoring stack
       - name: Deploy monitoring stack
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         run: |
           docker compose up -d
-
 
       # ⭐ NEW STEP — Send SMS Notification
       - name: Notify Deployment via SMS
         run: |
           curl -X POST OST https://61hgbriox2.execute-api.us-east-1.amazonaws.com/notify
+          
